src/components/header/header.styles.scss
@import "../../theme/main.scss";

.header {
    height: 10vh;
    background-color: $color-tertiary-light;
    background-position: top;
    background-size: cover;
    position: relative;

    &__logo-box {
        position: absolute;
        text-decoration: none;
        top: 40%;
        left: 20%;
        transform: translate(-50%,-50%);
        text-align: center;
        color: $color-header-text;
        font-size: 3rem;
        
    }
    &__product-text {
        position: absolute;
        text-decoration: none;
        top: 40%;
        left: 70%;
        transform: translate(-50%,-50%);
        text-align: center;
        color: $color-header-text;
        font-size: 2rem;

    }
    &__login-text {
        position: absolute;
        text-decoration: none;
        top: 40%;
        left: 80%;
        transform: translate(-50%,-50%);
        text-align: center;
        color: $color-header-text;
        font-size: 2rem;
    }
    &__cart-box {
        position: absolute;
        text-decoration: none;
        top: 45%;
        left: 90%;
        transform: translate(-50%,-50%);
        h2 {
            color: $color-grey-dark-3;
            font-size: 2rem;
        }
    }
    .item-len{
        color: $color-white;
        background-color: red;
        border-radius: 2rem;
        text-align: center;
        position: absolute;
        top: -1rem;
        right: -1rem;
        padding: .1rem;
    }
}

